noinst_LTLIBRARIES += libzfsmon.la

libzfsmon_la_SOURCES = src/zfsmon_sqlite.c \
                       src/zfsmon.c \
                       src/zpool.c \
                       src/zpool_util.c \
                       src/zpool_prop.c \
                       src/zpool_iostat.c \
                       src/zpool_print.c

libzfsmon_la_LIBADD = libsqlite3.la
